feat: upload pictures in product
